MSVC fixes: * include <string> when using strinG * use boolean operators instead of aliases?
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@962 941e2c2b-deac-454f-805a-451daa25f33c

--- a/configure.ac
+++ b/configure.ac
@@ -42,6 +42,7 @@ AC_SUBST(HFSTOSPELL_NAME)
 # Checks for programs
 AC_PROG_CC
 AC_PROG_CXX
+AC_LIBTOOL_WIN32_DLL
 m4_ifdef([LT_INIT], [LT_INIT], [AC_PROG_LIBTOOL])
 AC_PROG_INSTALL
 AC_PROG_LN_S
