Preliminary zhfst support
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@1533 941e2c2b-deac-454f-805a-451daa25f33c

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,21 +14,29 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
+# to silence: 
+# libtoolize: Consider adding `-I m4' to ACLOCAL_AMFLAGS in Makefile.am.
+ACLOCAL_AMFLAGS=-I m4
+
 # targets
-bin_PROGRAMS=hfst-ospell
+bin_PROGRAMS=hfst-ospell hfst-ospell-norvig
 lib_LTLIBRARIES=libhfstospell.la
 
 # library parts
-libhfstospell_la_SOURCES=hfst-ol.cc ospell.cc
-libhfstospell_la_LDFLAGS=-no-undefined -version-info 0:0:0
+libhfstospell_la_SOURCES=hfst-ol.cc ospell.cc ZHfstOspeller.cc
+libhfstospell_la_CXXFLAGS=$(AM_CXXFLAGS) $(CXXFLAGS) $(LIBXML_CFLAGS)
+libhfstospell_la_LDFLAGS=-no-undefined -version-info 1:0:0 $(LIBXML_LIBS)
 
 # link sample program against library here
 hfst_ospell_SOURCES=main.cc
 hfst_ospell_LDADD=libhfstospell.la
+hfst_ospell_norvig_SOURCES=main-norvig.cc
+hfst_ospell_norvig_LDADD=libhfstospell.la
 
 # install headers for library in hfst's includedir
-include_HEADERS=hfst-ol.h ospell.h
+include_HEADERS=hfst-ol.h ospell.h ZHfstOspeller.h
 
 # pkgconfig
 pkgconfigdir=$(libdir)/pkgconfig
 pkgconfig_DATA=hfstospell.pc
+
