use same includedir in pc as makefile
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@1641 941e2c2b-deac-454f-805a-451daa25f33c

--- a/hfstospell.pc.in
+++ b/hfstospell.pc.in
@@ -7,4 +7,4 @@ Name: hfstospell
 Description: Finite-state transducer based spell checker library
 Version: @HFSTOSPELL_VERSION@
 Libs: -L${libdir} -l@HFSTOSPELL_NAME@
-Cflags: -I${includedir}/hfst/ 
+Cflags: -I${includedir}
