--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,7 @@
 ACLOCAL_AMFLAGS=-I m4
 
 # targets
-bin_PROGRAMS=hfst-ospell hfst-ospell-norvig
+bin_PROGRAMS=hfst-ospell hfst-ospell-norvig hfst-ospell-cicling hfst-ospell-fsmnlp-2012
 lib_LTLIBRARIES=libhfstospell.la
 
 # library parts
@@ -32,7 +32,10 @@ hfst_ospell_SOURCES=main.cc
 hfst_ospell_LDADD=libhfstospell.la
 hfst_ospell_norvig_SOURCES=main-norvig.cc
 hfst_ospell_norvig_LDADD=libhfstospell.la
-
+hfst_ospell_cicling_SOURCES=main-cicling.cc
+hfst_ospell_cicling_LDADD=libhfstospell.la
+hfst_ospell_fsmnlp_2012_SOURCES=main-fsmnlp-2012.cc
+hfst_ospell_fsmnlp_2012_LDADD=libhfstospell.la
 # install headers for library in hfst's includedir
 include_HEADERS=hfst-ol.h ospell.h ol-exceptions.h ZHfstOspeller.h
 
