Commented out hfst-ospell-cicling from Makefile.
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@2282 941e2c2b-deac-454f-805a-451daa25f33c

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,7 @@
 ACLOCAL_AMFLAGS=-I m4
 
 # targets
-bin_PROGRAMS=hfst-ospell hfst-ospell-norvig hfst-ospell-cicling hfst-ospell-fsmnlp-2012
+bin_PROGRAMS=hfst-ospell hfst-ospell-norvig hfst-ospell-fsmnlp-2012
 lib_LTLIBRARIES=libhfstospell.la
 
 # library parts
