--- a/Makefile.am
+++ b/Makefile.am
@@ -19,23 +19,28 @@
 ACLOCAL_AMFLAGS=-I m4
 
 # targets
-bin_PROGRAMS=hfst-ospell hfst-ospell-norvig hfst-ospell-fsmnlp-2012
+CONFERENCE_DEMOS=hfst-ospell-norvig hfst-ospell-fsmnlp-2012 hfst-ospell-cicling
+bin_PROGRAMS=hfst-ospell $(CONFERENCE_DEMOS)
 lib_LTLIBRARIES=libhfstospell.la
 
 # library parts
 libhfstospell_la_SOURCES=hfst-ol.cc ospell.cc ZHfstOspeller.cc
-libhfstospell_la_CXXFLAGS=$(AM_CXXFLAGS) $(CXXFLAGS) $(LIBXML_CFLAGS)
-libhfstospell_la_LDFLAGS=-no-undefined -version-info 1:0:0 $(LIBXML_LIBS)
+libhfstospell_la_CXXFLAGS=$(AM_CXXFLAGS) $(CXXFLAGS) $(LIBXMLPP_CFLAGS)
+libhfstospell_la_LDFLAGS=-no-undefined -version-info 2:0:0 $(LIBXMLPP_LIBS)
 
 # link sample program against library here
 hfst_ospell_SOURCES=main.cc
 hfst_ospell_LDADD=libhfstospell.la
+hfst_ospell_CXXFLAGS=$(AM_CXXFLAGS) $(CXXFLAGS) $(LIBXMLPP_CFLAGS)
 hfst_ospell_norvig_SOURCES=main-norvig.cc
 hfst_ospell_norvig_LDADD=libhfstospell.la
-#hfst_ospell_cicling_SOURCES=main-cicling.cc
-#hfst_ospell_cicling_LDADD=libhfstospell.la
+hfst_ospell_norvig_CXXFLAGS=$(AM_CXXFLAGS) $(CXXFLAGS) $(LIBXMLPP_CFLAGS)
+hfst_ospell_cicling_SOURCES=main-cicling.cc
+hfst_ospell_cicling_LDADD=libhfstospell.la
+hfst_ospell_cicling_CXXFLAGS=$(AM_CXXFLAGS) $(CXXFLAGS) $(LIBXMLPP_CFLAGS)
 hfst_ospell_fsmnlp_2012_SOURCES=main-fsmnlp-2012.cc
 hfst_ospell_fsmnlp_2012_LDADD=libhfstospell.la
+hfst_ospell_fsmnlp_2012_CXXFLAGS=$(AM_CXXFLAGS) $(CXXFLAGS) $(LIBXMLPP_CFLAGS)
 # install headers for library in hfst's includedir
 include_HEADERS=hfst-ol.h ospell.h ol-exceptions.h ZHfstOspeller.h
 
