Enabling VPATH building for 'make check'.
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@2616 941e2c2b-deac-454f-805a-451daa25f33c

--- a/configure.ac
+++ b/configure.ac
@@ -109,7 +109,7 @@ AC_CHECK_FUNCS([strndup])
 # Checks for system services
 
 # config files
-AC_CONFIG_FILES([Makefile hfstospell.pc])
+AC_CONFIG_FILES([Makefile hfstospell.pc basic-legacy.sh basic-zhfst.sh])
 
 # output
 AC_OUTPUT
