--- a/hfstospell.pc.in
+++ b/hfstospell.pc.in
@@ -3,7 +3,7 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: hfstospell
+Name: hfst-ospell
 Description: Finite-state transducer based spell checker library
 Version: @HFSTOSPELL_VERSION@
 Libs: -L${libdir} -l@HFSTOSPELL_NAME@
