Clean and ignore index.xml.
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@3647 941e2c2b-deac-454f-805a-451daa25f33c

--- a/Makefile.am
+++ b/Makefile.am
@@ -106,7 +106,7 @@ XFAIL_TESTS=empty-descriptions.sh
 EXTRA_DIST=$(TXTS) basic_test.xml empty_descriptions.xml test.strings $(TESTS)
 
 clean-local:
-	-rm -rf $(check_DATA)
+	-rm -rf $(check_DATA) index.xml
 endif
 
 # N.B. Do not parallel test, race condition exists
